--- a/c_to_rust/credit/Cargo.toml
+++ b/c_to_rust/credit/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-my_library = { path = "../my_library" }
+my_library = { git = "https://github.com/Greenfire44Official/my_library.git" }
