--- a/c_to_rust/guessing_game/Cargo.toml
+++ b/c_to_rust/guessing_game/Cargo.toml
@@ -5,4 +5,4 @@ edition = "2024"
 
 [dependencies]
 rand = "0.9.2"
-my_library = { path = "../my_library" }
+my_library = { git = "https://github.com/Greenfire44Official/my_library.git" }
