--- a/c_to_rust/mario_more/Cargo.toml
+++ b/c_to_rust/mario_more/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-my_library = { path = "../my_library" }
+my_library = { git = "https://github.com/Greenfire44Official/my_library.git" }
+
+[[bin]]
+name = "mario"
+path = "src/main.rs"
