--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [workspace]
 resolver = "3"
-members = [ "c_to_rust/caesar",
+members = [ "c_to_rust/caesar", "c_to_rust/cash",
     "c_to_rust/credit",
     "c_to_rust/hello_me",
     "c_to_rust/hello_world",
     "c_to_rust/mario_more",
-    "c_to_rust/my_library", "c_to_rust/plurality", "c_to_rust/readability",
-    "c_to_rust/scrabble", "c_to_rust/substitution",
+    "c_to_rust/my_library", "c_to_rust/plurality", "c_to_rust/readability", "c_to_rust/runoff",
+    "c_to_rust/scrabble", "c_to_rust/substitution", "c_to_rust/tideman",
 ]
