pset4: filter-less started. change library name to rust50. Update README.md.
filter-less progress:
blur ✅
grayscale ❌
reflect ❌
sepia ❌
Image crate makes compilation really slow, I might consider replacing it or going for raw data manipulation. bmp crate was tested before, it had fast compilation but for some reason it  saved the image flipped upside down.

Update README.md  to prepare for public release.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "3"
 members = [
-    "my_library",
+    "rust50",
     "c_to_rust/pset1/hello_me",
     "c_to_rust/pset1/hello_world",
     "c_to_rust/pset1/mario_more",
