--- a/c_to_rust/pset4/filter/filter-less/Cargo.toml
+++ b/c_to_rust/pset4/filter/filter-less/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.99"
+image = "0.25.6"
+my_library = { git = "https://github.com/Greenfire44Official/my_library.git", version = "0.1.0" }
