chore: update rust50 library name in all packages. chore: cleanup some residual files. Update rust50 library's README.md

--- a/c_to_rust/pset1/credit/Cargo.toml
+++ b/c_to_rust/pset1/credit/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-my_library = { git = "https://github.com/Greenfire44Official/my_library.git" }
+rust50 = { git = "https://github.com/Greenfire44Official/rust50.git" }
