--- a/c_to_rust/pset2/readability/Cargo.toml
+++ b/c_to_rust/pset2/readability/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-my_library = { git = "https://github.com/Greenfire44Official/my_library.git", version = "0.1.0" }
+rust50 = { git = "https://github.com/Greenfire44Official/rust50", version = "0.1.1" }
 regex = "1.11.1"
