--- a/c_to_rust/pset1/mario_more/Cargo.toml
+++ b/c_to_rust/pset1/mario_more/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-my_library = { git = "https://github.com/Greenfire44Official/my_library.git" }
+rust50 = { git = "https://github.com/Greenfire44Official/rust50.git" }
 
 [[bin]]
 name = "mario"
