--- a/c_to_rust/pset2/scrabble/Cargo.toml
+++ b/c_to_rust/pset2/scrabble/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-my_library = { git = "https://github.com/Greenfire44Official/my_library.git" }
+rust50 = { git = "https://github.com/Greenfire44Official/rust50.git" }
