pset4: Unified filter-less and filter-more into a single package.
filter progress:

blur ⛔️ (Complete but not tested for accuaracy)
grayscale ⛔️ (Complete but not tested for accuaracy)
reflect ✅
sepia ⛔️ (Complete but not tested for accuaracy)
edge ✅

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,6 @@ members = [
     "c_to_rust/pset3/runoff",
     "c_to_rust/pset3/tideman",
     "c_to_rust/pset4/volume",
-    "c_to_rust/pset4/filter/filter-less",
-    "c_to_rust/pset4/filter/filter-more",
+    "c_to_rust/pset4/filter",
     "c_to_rust/pset4/recover",
 ]
