--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,5 @@ members = [
     "c_to_rust/pset4/volume",
     "c_to_rust/pset4/filter",
     "c_to_rust/pset4/recover",
+    "c_to_rust/pset5/inheritance",
 ]
