--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,20 +2,23 @@
 resolver = "3"
 members = [
     "rust50",
-    "c_to_rust/pset1/hello_me",
-    "c_to_rust/pset1/hello_world",
-    "c_to_rust/pset1/mario_more",
-    "c_to_rust/pset1/cash",
-    "c_to_rust/pset1/credit",
-    "c_to_rust/pset2/scrabble",
-    "c_to_rust/pset2/readability",
-    "c_to_rust/pset2/caesar",
-    "c_to_rust/pset2/substitution",
-    "c_to_rust/pset3/plurality",
-    "c_to_rust/pset3/runoff",
-    "c_to_rust/pset3/tideman",
-    "c_to_rust/pset4/volume",
-    "c_to_rust/pset4/filter",
-    "c_to_rust/pset4/recover",
-    "c_to_rust/pset5/inheritance", "c_to_rust/pset6/dna",
+    "cs50_to_rust/pset1/hello_me",
+    "cs50_to_rust/pset1/hello_world",
+    "cs50_to_rust/pset1/mario_less",
+    "cs50_to_rust/pset1/mario_more",
+    "cs50_to_rust/pset1/cash",
+    "cs50_to_rust/pset1/credit",
+    "cs50_to_rust/pset2/scrabble",
+    "cs50_to_rust/pset2/readability",
+    "cs50_to_rust/pset2/caesar",
+    "cs50_to_rust/pset2/substitution",
+    "cs50_to_rust/pset3/plurality",
+    "cs50_to_rust/pset3/runoff",
+    "cs50_to_rust/pset3/tideman",
+    "cs50_to_rust/pset4/volume",
+    "cs50_to_rust/pset4/filter",
+    "cs50_to_rust/pset4/recover",
+    "cs50_to_rust/pset5/inheritance",
+    "cs50_to_rust/pset5/speller",
+    "cs50_to_rust/pset6/dna",
 ]
